force-app/main/default/objects/Retail_Customer_Churn_Model__c/Retail_Customer_Churn_Model__c.object-meta.xml
<CustomObject>
    <label>Retail Customer Churn Model</label>
    <nameField>
        <label>Retail Customer Churn Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Customer Churn Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>