force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <label>Channel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>