force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/customer_added_date__c.field-meta.xml
<CustomField>
    <fullName>customer_added_date__c</fullName>
    <label>Customer Added Date</label>
    <type>Date</type>
</CustomField>