force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/customer_churn_risk_group__c.field-meta.xml
<CustomField>
    <fullName>customer_churn_risk_group__c</fullName>
    <label>Customer Churn Risk Group</label>
    <length>30</length>
    <type>Text</type>
</CustomField>