force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/customer_duration_years__c.field-meta.xml
<CustomField>
    <fullName>customer_duration_years__c</fullName>
    <label>Customer Duration Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>