force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/is_churned_customer_perpetual__c.field-meta.xml
<CustomField>
    <fullName>is_churned_customer_perpetual__c</fullName>
    <label>Is Churned Customer Perpetual</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>