force-app/main/default/objects/Retail_Customer_Churn_Model__c/fields/sub_region__c.field-meta.xml
<CustomField>
    <fullName>sub_region__c</fullName>
    <label>Sub Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>